--- a/BrandEmbold/font_pack_benton.html
+++ b/BrandEmbold/font_pack_benton.html
@@ -102,17 +102,17 @@
         <h4>Usage in UI</h4>
         <div class="block">
           <h5>Example: Apply to Gamma present version</h5>
-          <div class="ui-screens screens-sofia">
-            <!-- <a href="./img/sofia-pro/sofia-pro-1.png" class="link-screenshot"><img src="./img/sofia-pro/sofia-pro-1.png" width="100%" height="auto" class="screenshot" /></a> -->
-            <a href="./img/sofia-pro/sofia-pro-2.png" class="link-screenshot"><img src="./img/sofia-pro/sofia-pro-2.png" width="100%" height="auto" class="screenshot" /></a>
-            <!-- <a href="./img/sofia-pro/sofia-pro-3.png" class="link-screenshot"><img src="./img/sofia-pro/sofia-pro-3.png" width="100%" height="auto" class="screenshot" /></a> -->
-            <a href="./img/sofia-pro/sofia-pro-4.png" class="link-screenshot"><img src="./img/sofia-pro/sofia-pro-4.png" width="100%" height="auto" class="screenshot" /></a>
-            <a href="./img/sofia-pro/sofia-pro-5.png" class="link-screenshot"><img src="./img/sofia-pro/sofia-pro-5.png" width="100%" height="auto" class="screenshot" /></a>
-            <a href="./img/sofia-pro/sofia-pro-6.png" class="link-screenshot"><img src="./img/sofia-pro/sofia-pro-6.png" width="100%" height="auto" class="screenshot" /></a>
-            <!-- <a href="./img/sofia-pro/sofia-pro-7.png" class="link-screenshot"><img src="./img/sofia-pro/sofia-pro-7.png" width="100%" height="auto" class="screenshot" /></a> -->
-            <!-- <a href="./img/sofia-pro/sofia-pro-8.png" class="link-screenshot"><img src="./img/sofia-pro/sofia-pro-8.png" width="100%" height="auto" class="screenshot" /></a> -->
-            <a href="./img/sofia-pro/sofia-pro-9.png" class="link-screenshot"><img src="./img/sofia-pro/sofia-pro-9.png" width="100%" height="auto" class="screenshot" /></a>
-            <!-- <a href="./img/sofia-pro/sofia-pro-10.png" class="link-screenshot"><img src="./img/sofia-pro/sofia-pro-10.png" width="100%" height="auto" class="screenshot" /></a> -->
+          <div class="ui-screens screens-benton">
+            <!-- <a href="./img/benton-sans/benton-sans-1.png" class="link-screenshot"><img src="./img/benton-sans/benton-sans-1.png" width="100%" height="auto" class="screenshot" /></a> -->
+            <a href="./img/benton-sans/benton-sans-2.png" class="link-screenshot"><img src="./img/benton-sans/benton-sans-2.png" width="100%" height="auto" class="screenshot" /></a>
+            <!-- <a href="./img/benton-sans/benton-sans-3.png" class="link-screenshot"><img src="./img/benton-sans/benton-sans-3.png" width="100%" height="auto" class="screenshot" /></a> -->
+            <a href="./img/benton-sans/benton-sans-4.png" class="link-screenshot"><img src="./img/benton-sans/benton-sans-4.png" width="100%" height="auto" class="screenshot" /></a>
+            <a href="./img/benton-sans/benton-sans-5.png" class="link-screenshot"><img src="./img/benton-sans/benton-sans-5.png" width="100%" height="auto" class="screenshot" /></a>
+            <a href="./img/benton-sans/benton-sans-6.png" class="link-screenshot"><img src="./img/benton-sans/benton-sans-6.png" width="100%" height="auto" class="screenshot" /></a>
+            <!-- <a href="./img/benton-sans/benton-sans-7.png" class="link-screenshot"><img src="./img/benton-sans/benton-sans-7.png" width="100%" height="auto" class="screenshot" /></a> -->
+            <!-- <a href="./img/benton-sans/benton-sans-8.png" class="link-screenshot"><img src="./img/benton-sans/benton-sans-8.png" width="100%" height="auto" class="screenshot" /></a> -->
+            <a href="./img/benton-sans/benton-sans-9.png" class="link-screenshot"><img src="./img/benton-sans/benton-sans-9.png" width="100%" height="auto" class="screenshot" /></a>
+            <!-- <a href="./img/benton-sans/benton-sans-10.png" class="link-screenshot"><img src="./img/benton-sans/benton-sans-10.png" width="100%" height="auto" class="screenshot" /></a> -->
           </div>
         </div>
         <div class="block">
