--- a/embold.com/company-about.html
+++ b/embold.com/company-about.html
@@ -24,7 +24,7 @@
       </div>
       <div class="nav-wrap-items">
         <div class="nav-item-main">
-          <span class="active">Product</span> <i class="fas fa-angle-down"></i>
+          Product <i class="fas fa-angle-down"></i>
         </div>
         <div class="nav-item-main">
           User Stories <i class="fas fa-angle-down"></i>
@@ -33,7 +33,7 @@
           Resources <i class="fas fa-angle-down"></i>
         </div>
         <div class="nav-item-main">
-          Company <i class="fas fa-angle-down"></i>
+          <span class="active">Company</span> <i class="fas fa-angle-down"></i>
         </div>
       </div>
       <div class="nav-item-sign">
@@ -80,12 +80,25 @@
 
   <div class="container block block-header-sub">
     <div class="row">
-      <div class="col-6">
-        <h1 class="header-sub-title">Pricing</h1>
+      <div class="col-8">
+        <h1 class="header-sub-title">
+          We need to change<br />
+          how we write code. Period
+        </h1>
       </div>
     </div>
-    <div class="header-image bg-product-features"></div>
+    <div class="header-image bg-company-about"></div>
   </div>
+
+  <section class="block block-company-summary">
+    <div class="container">
+      <div class="row">
+        <div class="col-12">
+          test
+        </div>
+      </div>
+    </div>
+  </section>
 
   <section class="container block block-section-sub block-section-left">
     <div class="row">
@@ -115,23 +128,11 @@
     <div class="row">
       <div class="col-6">
         <!-- <h4>Language Support</h4> -->
-        <h2 class="section-title">Smart Prioritization</h2>
+        <h2 class="section-title">From Good to Great</h2>
         <p class="description">embold is trusted by 1,000+ developers and 10+ Mega Companies. They are improving their codes and applications via embold. And also many developers and project managers want to use Embold to improve a progress in writing codes</p>
       </div>
       <div class="col-6">
         image
-      </div>
-    </div>
-  </section>
-  <section class="container block block-section-sub block-section-right">
-    <div class="row">
-      <div class="col-6">
-        image
-      </div>
-      <div class="col-6">
-        <!-- <h4>Language Support</h4> -->
-        <h2 class="section-title">Anti-Pattern</h2>
-        <p class="description">embold is trusted by 1,000+ developers and 10+ Mega Companies. They are improving their codes and applications via embold. And also many developers and project managers want to use Embold to improve a progress in writing codes</p>
       </div>
     </div>
   </section>
