--- a/embold.com/company-careers.html
+++ b/embold.com/company-careers.html
@@ -24,7 +24,7 @@
       </div>
       <div class="nav-wrap-items">
         <div class="nav-item-main">
-          <span class="active">Product</span> <i class="fas fa-angle-down"></i>
+          Product <i class="fas fa-angle-down"></i>
         </div>
         <div class="nav-item-main">
           User Stories <i class="fas fa-angle-down"></i>
@@ -33,7 +33,7 @@
           Resources <i class="fas fa-angle-down"></i>
         </div>
         <div class="nav-item-main">
-          Company <i class="fas fa-angle-down"></i>
+          <span class="active">Company</span> <i class="fas fa-angle-down"></i>
         </div>
       </div>
       <div class="nav-item-sign">
@@ -80,61 +80,110 @@
 
   <div class="container block block-header-sub">
     <div class="row">
-      <div class="col-6">
-        <h1 class="header-sub-title">Pricing</h1>
+      <div class="col-8">
+        <h1 class="header-sub-title">
+          Join Our Team
+        </h1>
       </div>
     </div>
-    <div class="header-image bg-product-features"></div>
+    <div class="header-image bg-company-careers"></div>
   </div>
 
+  <section class="block-company-summary">
+    <div class="container">
+      <div class="row">
+        <div class="col-12">
+          test
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="container block block-section-sub block-section-left team-value">
+    <div class="row">
+      <div class="col-12">
+        <span class="icon-section ic-star-glow"></span>
+        <h2 class="section-title">Our Team Value</h2>
+        <p class="block-description">embold is trusted by 1,000+ developers and 10+ Mega Companies. They are improving their codes and applications via embold. And also many developers and project managers want to use Embold to improve a progress in writing codes</p>
+      </div>
+      <div class="body-content">
+        <div class="col-6">
+          <div class="wrap-value">
+            <div class="photo bg-team-value-international"></div>
+            <h3 class="title">International</h3>
+            <p class="description">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut et scelerisque enim. Donec porttitor bibendum dui, a fringilla nisl ullamcorper quis. Class aptent taciti sociosqu ad litora torquent per conubia.
+            </p>
+          </div>
+          <div class="wrap-value">
+            <div class="photo bg-team-value-international"></div>
+            <h3 class="title">International</h3>
+            <p class="description">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut et scelerisque enim. Donec porttitor bibendum dui, a fringilla nisl ullamcorper quis. Class aptent taciti sociosqu ad litora torquent per conubia.
+            </p>
+          </div>
+        </div>
+        <div class="col-6">
+          <div class="wrap-value wrap-value-left">
+            <div class="photo bg-team-value-international"></div>
+            <h3 class="title">International</h3>
+            <p class="description">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut et scelerisque enim. Donec porttitor bibendum dui, a fringilla nisl ullamcorper quis. Class aptent taciti sociosqu ad litora torquent per conubia.
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
   <section class="container block block-section-sub block-section-left">
     <div class="row">
-      <div class="col-6">
-        <!-- <h4>Language Support</h4> -->
-        <h2 class="section-title">From Good to Great</h2>
-        <p class="description">embold is trusted by 1,000+ developers and 10+ Mega Companies. They are improving their codes and applications via embold. And also many developers and project managers want to use Embold to improve a progress in writing codes</p>
+      <div class="col-12">
+        <span class="icon-section ic-gift-box"></span>
+        <h2 class="section-title">Benefits for you</h2>
+        <p class="block-description">embold is trusted by 1,000+ developers and 10+ Mega Companies. They are improving their codes and applications via embold. And also many developers and project managers want to use Embold to improve a progress in writing codes</p>
       </div>
-      <div class="col-6">
-        image
+      <div class="body-content">
+        <div class="col-4">
+          3 blocks
+        </div>
+        <div class="col-4">
+          3 blocks
+        </div>
+        <div class="col-4">
+          3 blocks
+        </div>
+        <div class="col-4">
+          3 blocks
+        </div>
+        <div class="col-4">
+          3 blocks
+        </div>
+        <div class="col-4">
+          3 blocks
+        </div>
       </div>
     </div>
   </section>
-  <section class="container block block-section-sub block-section-right">
-    <div class="row">
-      <div class="col-6">
-        image
-      </div>
-      <div class="col-6">
-        <!-- <h4>Language Support</h4> -->
-        <h2 class="section-title">Multi-Dimensional Static Analysis</h2>
-        <p class="description">embold is trusted by 1,000+ developers and 10+ Mega Companies. They are improving their codes and applications via embold. And also many developers and project managers want to use Embold to improve a progress in writing codes</p>
-      </div>
-    </div>
+  <section>
+
   </section>
   <section class="container block block-section-sub block-section-left">
     <div class="row">
-      <div class="col-6">
-        <!-- <h4>Language Support</h4> -->
-        <h2 class="section-title">Smart Prioritization</h2>
-        <p class="description">embold is trusted by 1,000+ developers and 10+ Mega Companies. They are improving their codes and applications via embold. And also many developers and project managers want to use Embold to improve a progress in writing codes</p>
+      <div class="col-12">
+        <span class="icon-section ic-door-open"></span>
+        <h2 class="section-title">Job Opening</h2>
+        <p class="block-description">embold is trusted by 1,000+ developers and 10+ Mega Companies. They are improving their codes and applications via embold. And also many developers and project managers want to use Embold to improve a progress in writing codes</p>
       </div>
-      <div class="col-6">
-        image
-      </div>
-    </div>
-  </section>
-  <section class="container block block-section-sub block-section-right">
-    <div class="row">
-      <div class="col-6">
-        image
-      </div>
-      <div class="col-6">
-        <!-- <h4>Language Support</h4> -->
-        <h2 class="section-title">Anti-Pattern</h2>
-        <p class="description">embold is trusted by 1,000+ developers and 10+ Mega Companies. They are improving their codes and applications via embold. And also many developers and project managers want to use Embold to improve a progress in writing codes</p>
+      <div class="body-content">
+        <div class="col-2">
+        </div>
+        <div class="col-8">
+          Job List
+        </div>
       </div>
     </div>
   </section>
+
 
   <!-- landing to other page block -->
   <div class="container-fluid bg-orange">
