--- a/embold.com/index.html
+++ b/embold.com/index.html
@@ -16,7 +16,7 @@
   <div class="nav-hover">
     <nav class="nav nav-grid nav-index nav-default">
       <div class="nav-item-logo">
-        <img src="images/logo-embold.svg" width="113" height="20" />
+        <a href="index.html"><img src="images/logo-embold.svg" width="113" height="20" /></a>
       </div>
       <div class="nav-wrap-items">
         <div class="nav-item-main">
@@ -46,28 +46,28 @@
         </div>
         <div class="nav-wrap-items">
           <div class="nav-item-main">
-            <a href="#" class="nav-menu-link">Overview</a>
-            <a href="#" class="nav-menu-link">Features</a>
-            <a href="#" class="nav-menu-link">Use Cases</a>
-            <a href="#" class="nav-menu-link">Pricing</a>
-            <a href="#" class="nav-menu-link">Partnership</a>
+            <a href="product-overview.html" class="nav-menu-link">Overview</a>
+            <a href="product-features.html" class="nav-menu-link">Features</a>
+            <a href="product-use-cases.html" class="nav-menu-link">Use Cases</a>
+            <a href="product-pricing.html" class="nav-menu-link">Pricing</a>
+            <a href="product-partnership.html" class="nav-menu-link">Partnership</a>
           </div>
           <div class="nav-item-main">
-            <a href="#" class="nav-menu-link">By User Role</a>
-            <a href="#" class="nav-menu-link">By Team Size</a>
-            <a href="#" class="nav-menu-link">By Industry</a>
-            <a href="#" class="nav-menu-link">Solution Approach</a>
+            <a href="user-stories-user-roles.html" class="nav-menu-link">By User Role</a>
+            <a href="user-stories-team-size.html" class="nav-menu-link">By Team Size</a>
+            <a href="user-stories-industry.html" class="nav-menu-link">By Industry</a>
+            <a href="user-stories-solution-approach.html" class="nav-menu-link">Solution Approach</a>
           </div>
           <div class="nav-item-main">
-            <a href="#" class="nav-menu-link">Product</a>
-            <a href="#" class="nav-menu-link">Download</a>
-            <a href="#" class="nav-menu-link">Media</a>
+            <a href="resources-product.html" class="nav-menu-link">Product</a>
+            <a href="resources-download.html" class="nav-menu-link">Download</a>
+            <a href="resources-media.html" class="nav-menu-link">Media</a>
           </div>
           <div class="nav-item-main">
-            <a href="#" class="nav-menu-link">About</a>
-            <a href="#" class="nav-menu-link">Team</a>
-            <a href="#" class="nav-menu-link">Careers</a>
-            <a href="#" class="nav-menu-link">News</a>
+            <a href="company-about.html" class="nav-menu-link">About</a>
+            <a href="company-team.html" class="nav-menu-link">Team</a>
+            <a href="company-careers.html" class="nav-menu-link">Careers</a>
+            <a href="company-news.html" class="nav-menu-link">News</a>
           </div>
         </div>
       </div>
