--- a/embold.com/product-partnership.html
+++ b/embold.com/product-partnership.html
@@ -20,7 +20,7 @@
   <div class="nav-hover">
     <nav class="nav nav-grid nav-index nav-default">
       <div class="nav-item-logo">
-        <img src="images/logo-embold.svg" width="113" height="20" />
+        <a href="index.html"><img src="images/logo-embold.svg" width="113" height="20" /></a>
       </div>
       <div class="nav-wrap-items">
         <div class="nav-item-main">
