click dummy keep going

--- a/embold.com/company-careers.html
+++ b/embold.com/company-careers.html
@@ -88,17 +88,6 @@
     </div>
     <div class="header-image bg-company-careers"></div>
   </div>
-
-  <section class="block-company-summary">
-    <div class="container">
-      <div class="row">
-        <div class="col-12">
-          test
-        </div>
-      </div>
-    </div>
-  </section>
-
   <section class="container block block-section-sub block-section-left team-value">
     <div class="row">
       <div class="col-12">
@@ -135,7 +124,7 @@
       </div>
     </div>
   </section>
-  <section class="container block block-section-sub block-section-left">
+  <section class="container block block-section-sub company-benefit">
     <div class="row">
       <div class="col-12">
         <span class="icon-section ic-gift-box"></span>
@@ -144,41 +133,184 @@
       </div>
       <div class="body-content">
         <div class="col-4">
-          3 blocks
+          <div class="block-column">
+            <div class="icon ic-coffee">
+            </div>
+            <div class="title">
+              Free Coffee and Drinks
+            </div>
+            <div class="description">
+              Let’s put Coffee into your brains
+            </div>
+          </div>
         </div>
         <div class="col-4">
-          3 blocks
+          <div class="block-column">
+            <div class="icon ic-coffee">
+            </div>
+            <div class="title">
+              Free Coffee and Drinks
+            </div>
+            <div class="description">
+              Let’s put Coffee into your brains
+            </div>
+          </div>
         </div>
         <div class="col-4">
-          3 blocks
+          <div class="block-column">
+            <div class="icon ic-coffee">
+            </div>
+            <div class="title">
+              Free Coffee and Drinks
+            </div>
+            <div class="description">
+              Let’s put Coffee into your brains
+            </div>
+          </div>
         </div>
         <div class="col-4">
-          3 blocks
+          <div class="block-column">
+            <div class="icon ic-coffee">
+            </div>
+            <div class="title">
+              Free Coffee and Drinks
+            </div>
+            <div class="description">
+              Let’s put Coffee into your brains
+            </div>
+          </div>
         </div>
         <div class="col-4">
-          3 blocks
+          <div class="block-column">
+            <div class="icon ic-coffee">
+            </div>
+            <div class="title">
+              Free Coffee and Drinks
+            </div>
+            <div class="description">
+              Let’s put Coffee into your brains
+            </div>
+          </div>
         </div>
         <div class="col-4">
-          3 blocks
+          <div class="block-column">
+            <div class="icon ic-coffee">
+            </div>
+            <div class="title">
+              Free Coffee and Drinks
+            </div>
+            <div class="description">
+              Let’s put Coffee into your brains
+            </div>
+          </div>
         </div>
       </div>
     </div>
   </section>
-  <section>
-
+  <section class="block block-section-fw philosophy">
+    <div class="photo">
+      photo
+    </div>
+    <div class="description">
+      <p class="paragraph">
+      “Acellere has been the place for me to learn and grow as an individual and team member. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo.”
+      </p>
+      <p class="author">
+        <span class="name">Vishal Rai</span>
+        CEO, Founder
+      </p>
+    </div>
   </section>
-  <section class="container block block-section-sub block-section-left">
+  <section class="container block block-section-sub job-opening">
     <div class="row">
       <div class="col-12">
         <span class="icon-section ic-door-open"></span>
         <h2 class="section-title">Job Opening</h2>
         <p class="block-description">embold is trusted by 1,000+ developers and 10+ Mega Companies. They are improving their codes and applications via embold. And also many developers and project managers want to use Embold to improve a progress in writing codes</p>
       </div>
-      <div class="body-content">
+      <div class="body-content job-opening-list">
         <div class="col-2">
         </div>
         <div class="col-8">
-          Job List
+          <div class="job-table">
+            <div class="wrap-title">
+              <div class="job-title title-sm">
+                Job Title
+              </div>
+              <div class="location title-sm">
+                Location
+              </div>
+              <div class="show-more">
+
+              </div>
+            </div>
+            <div class="job-row">
+              <div class="job-title">
+                Performance Marketer
+              </div>
+              <div class="location">
+                Frankfurt am Main, Germany
+              </div>
+              <div class="show-more">
+                Show more
+              </div>
+            </div>
+            <div class="job-row">
+              <div class="job-title">
+                Pre-Sales Manager (M/W)
+              </div>
+              <div class="location">
+                Frankfurt am Main, Germany
+              </div>
+              <div class="show-more">
+                Show more
+              </div>
+            </div>
+            <div class="job-row">
+              <div class="job-title">
+                Sales Manager (M/W)
+              </div>
+              <div class="location">
+                Frankfurt am Main, Germany
+              </div>
+              <div class="show-more">
+                Show more
+              </div>
+            </div>
+            <div class="job-row">
+              <div class="job-title">
+                Solution Engineer (M/W)
+              </div>
+              <div class="location">
+                Frankfurt am Main, Germany
+              </div>
+              <div class="show-more">
+                Show more
+              </div>
+            </div>
+            <div class="job-row">
+              <div class="job-title">
+                UX/UI Designer
+              </div>
+              <div class="location">
+                Frankfurt am Main, Germany
+              </div>
+              <div class="show-more">
+                Show more
+              </div>
+            </div>
+            <div class="job-row">
+              <div class="job-title">
+                HR Intern
+              </div>
+              <div class="location">
+                Frankfurt am Main, Germany
+              </div>
+              <div class="show-more">
+                Show more
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
