--- a/embold.com/product-pricing.html
+++ b/embold.com/product-pricing.html
@@ -87,6 +87,58 @@
     <div class="header-image bg-product-features"></div>
   </div>
 
+  <div class="container product-pricing block">
+    <div class="row">
+      <div class="col-4">
+        <div class="pricing-tab active">
+          <i class="icon-md ic-cloud-code"></i>
+          <h3 class="pricing-title">Cloud-Based</h3>
+          <p class="pricing-description">
+            Free for all open source projects
+          </p>
+        </div>
+      </div>
+      <div class="col-4">
+        <div class="pricing-tab">
+          <i class="icon-md ic-servers"></i>
+          <h3 class="pricing-title">On-Premise</h3>
+          <p class="pricing-description">
+            Free for all open source projects
+          </p>
+        </div>
+      </div>
+      <div class="col-4">
+        <div class="pricing-tab">
+          <i class="icon-md ic-building-big"></i>
+          <h3 class="pricing-title">Enterprise</h3>
+          <p class="pricing-description">
+            Free for all open source projects
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <section class="container block block-section-sub company-benefit">
+    <div class="row">
+      <div class="col-12">
+        <span class="icon-section ic-gift-box"></span>
+        <h2 class="section-title">Cloud-Based Packages</h2>
+        <p class="block-description">embold is trusted by 1,000+ developers and 10+ Mega Companies.
+          They are improving their codes and applications via embold.
+          And also many developers and project managers want to use
+          Embold to improve a progress in writing codes
+        </p>
+      </div>
+    </div>
+    <div class="row">
+
+    </div>
+    <div class="row">
+
+    </div>
+  </section>
+
   <section class="container block block-section-sub block-section-left">
     <div class="row">
       <div class="col-6">
@@ -133,6 +185,24 @@
         <h2 class="section-title">Anti-Pattern</h2>
         <p class="description">embold is trusted by 1,000+ developers and 10+ Mega Companies. They are improving their codes and applications via embold. And also many developers and project managers want to use Embold to improve a progress in writing codes</p>
       </div>
+    </div>
+  </section>
+  <section class="container block block-section-sub company-benefit">
+    <div class="row">
+      <div class="col-12">
+        <span class="icon-section ic-gift-box"></span>
+        <h2 class="section-title">Cloud-Based FAQ</h2>
+        <p class="block-description">embold is trusted by 1,000+ developers and 10+ Mega Companies.
+          They are improving their codes and applications via embold.
+          And also many developers and project managers want to use Embold to improve a progress in writing codes
+        </p>
+      </div>
+    </div>
+    <div class="row">
+
+    </div>
+    <div class="row">
+
     </div>
   </section>
 
