--- a/embold.com/company-about.html
+++ b/embold.com/company-about.html
@@ -89,7 +89,60 @@
     </div>
     <div class="header-image bg-company-about"></div>
   </div>
-
+  <section class="container block block-section-sub company-about-status">
+    <div class="row">
+      <div class="body-content">
+        <div class="col-3">
+          <div class="block-column">
+            <div class="icon ic-coffee">
+            </div>
+            <div class="title">
+              Free Coffee and Drinks
+            </div>
+            <div class="description">
+              Let’s put Coffee into your brains
+            </div>
+          </div>
+        </div>
+        <div class="col-3">
+          <div class="block-column">
+            <div class="icon ic-coffee">
+            </div>
+            <div class="title">
+              Free Coffee and Drinks
+            </div>
+            <div class="description">
+              Let’s put Coffee into your brains
+            </div>
+          </div>
+        </div>
+        <div class="col-3">
+          <div class="block-column">
+            <div class="icon ic-coffee">
+            </div>
+            <div class="title">
+              Free Coffee and Drinks
+            </div>
+            <div class="description">
+              Let’s put Coffee into your brains
+            </div>
+          </div>
+        </div>
+        <div class="col-3">
+          <div class="block-column">
+            <div class="icon ic-coffee">
+            </div>
+            <div class="title">
+              Free Coffee and Drinks
+            </div>
+            <div class="description">
+              Let’s put Coffee into your brains
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
   <section class="block block-company-summary">
     <div class="container">
       <div class="row">
